experimenting with style updates. Fixed wrapping issues. Might need to start over

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -4,8 +4,18 @@ $main-color: #d2e4c4;
 // $main-color: #ecf5e6;
 // $main-color: #f7fdf2;
 
+// $main-color: #edf5e6;
+
+$black: #101010;
+
 .homepage {
   font-family: "Montserrat", sans-serif;
+
+  nav {
+    a {
+      color: white;
+    }
+  }
 
   h1 {
     font-weight: 900;
@@ -35,8 +45,10 @@ $main-color: #d2e4c4;
 
   .image-container {
     position: relative;
-    width: 50%;
+    width: 40%;
     background-image: url("/me.jpg");
+    // -webkit-filter: grayscale(70%); /* Safari 6.0 - 9.0 */
+    // filter: grayscale(20%);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -54,9 +66,11 @@ $main-color: #d2e4c4;
   }
 
   .content-container {
-    width: 50%;
+    width: 60%;
 
-    background-color: $main-color;
+    // background-color: $main-color;
+
+    background-color: $black;
 
     display: flex;
     align-items: center;
@@ -84,6 +98,8 @@ $main-color: #d2e4c4;
       text-align: center;
       vertical-align: middle;
       font-family: "Montserrat", sans-serif;
+      padding: 1rem;
+      color: white;
 
       &-myname {
         margin-bottom: 4rem;
@@ -94,16 +110,25 @@ $main-color: #d2e4c4;
         p {
           margin: 1rem;
         }
+        text-align: left;
+        a {
+          color: white;
+        }
       }
 
       #software {
-        background-color: black;
-        color: #ecf5e6;
+        background-color: $black;
+        color: white;
         font-family: "Inconsulata", "consolas", monospace;
         padding: 0.5rem;
-        margin: 0 0.5rem;
+        margin: 1rem 0.5rem;
+        white-space: nowrap;
+        display: inline-block;
       }
 
+      .warning {
+        max-width: 450px;
+      }
       h1 {
         // border-bottom: solid 1px #b8d8d8;
         display: inline;
@@ -232,13 +257,26 @@ $main-color: #d2e4c4;
 }
 
 @media all and (max-width: 736px) {
+  nav {
+    a {
+      color: black;
+    }
+  }
   .greeting {
+    color: black !important;
     position: absolute;
-    left: 2rem;
-    top: 4rem;
-
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
     &-myname {
       margin-bottom: 2rem !important;
+    }
+
+    .checkout {
+      a {
+        color: black !important;
+      }
     }
   }
 
